--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -72,7 +72,6 @@ jobs:
           tree-sitter --version
           pnpm --version
           gh --version
-          git-checkout-branch -a
           k9s version
           rustc --version
           kustomize version
@@ -86,6 +85,8 @@ jobs:
           go version
           npm --version
           tfenv version
+        # Because it's not installed on all hosts
+        # git-checkout-branch -a
   # verify_macos:
   #   # needs: check
   #   strategy:
