source nvm and goenv so i can test

--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -81,6 +81,14 @@ jobs:
           rain --version
           mdformat --version
           pre-commit --version
+          . $HOME/.nvm/nvm.sh
+          nvm version
+          npm --version
+          export GOENV_ROOT="$HOME/.goenv"
+          export PATH="$GOENV_ROOT/bin:$PATH"
+          eval "$(goenv init -)"
+          export PATH="$GOROOT/bin:$PATH"
+          export PATH="$PATH:$GOPATH/bin"
           go version
           tfenv version
         # Because it's not installed on all hosts
