--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -8,7 +8,6 @@ on: # yamllint disable-line rule:truthy
     branches:
       - main
 jobs:
-  # TODO(raypappa): failing until i get community.general installed
   check:
     runs-on: ubuntu-latest
     steps:
@@ -19,24 +18,32 @@ jobs:
         uses: ansible/ansible-lint@v25.1.2
         with:
           requirements_file: dev_work_bootstrap/meta/requirements.yml
-  verify_ubuntu:
+  verify:
+    # needs: check
     strategy:
       matrix:
         os:
-          # Arm debian is broken somehow. not sure why. disabling for now.
-          # - ubuntu-24.04-arm
+          - ubuntu-24.04-arm
           - ubuntu-latest
+          - macos-13
+          - macos-latest
     runs-on: ${{ matrix.os }}
-    # needs: check
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 2
       - name: "Install Python"
+        if: ${{ runner.os == 'Linux' }}
         uses: actions/setup-python@v4
       - name: Install Ansible
+        if: ${{ runner.os == 'Linux' }}
         run: python -m pip install ansible
-      - name: Add pyenv to path
+      - name: Install Ansible
+        if: ${{ runner.os == 'macOS' }}
+        run: |
+          brew update
+          brew install ansible
+      - name: Add git dirs to path
         run: |
           echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
           echo "$HOME/.goenv/bin" >> "$GITHUB_PATH"
@@ -90,35 +97,3 @@ jobs:
           export PATH="$GOROOT/bin:$PATH"
           export PATH="$PATH:$GOPATH/bin"
           go version
-  verify_macos:
-    # needs: check
-    strategy:
-      matrix:
-        os:
-          - macos-13
-          - macos-latest
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-      - name: "Install Python"
-        uses: actions/setup-python@v4
-      - name: Install Ansible
-        run: python -m pip install ansible
-      # - name: Install Ansible
-      #   run: |
-      #     if [[ uname == "Darwin" ]];then
-      #       brew update
-      #       brew install ansible
-      #    fi
-      - name: Add pyenv to path
-        run: |
-          echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
-          echo "$HOME/.goenv/bin" >> "$GITHUB_PATH"
-          echo "$HOME/.rbenv/bin" >> "$GITHUB_PATH"
-      - name: Run Ansible playbook
-        uses: dawidd6/action-ansible-playbook@v3
-        with:
-          playbook: playbook.yaml
-          directory: ./
