--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -21,6 +21,7 @@ jobs:
   verify:
     # needs: check
     strategy:
+      fail-fast: false
       matrix:
         os:
           - ubuntu-24.04-arm
