--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -43,6 +43,7 @@ jobs:
         if: ${{ runner.os == 'macOS' }}
         run: |
           brew update
+          brew doctor
           brew install ansible
       - name: Add git dirs to path
         run: |
