--- a/dev_work_bootstrap/tasks/darwin.yaml
+++ b/dev_work_bootstrap/tasks/darwin.yaml
@@ -1,37 +1,42 @@
 ---
-- name: Install homebrew forumale
+- name: Update homebrew
   community.general.homebrew:
-    name:
-      - git
-      - make
-      - unzip
-      - wget
-      - moreutils
-      - zip
-      - bash-completion
-      - binutils
-      - coreutils
-      - findutils
-      - gnu-tar
-      - gnu-sed
-      - gawk
-      - gnutls
-      - gnu-indent
-      - gnu-getopt
-      - grep
-      - openssh
-      - tmux
-      - awscli
-      - aws-sam-cli
-      - docker
-      - docker-completion
-      - docker-buildx
-    state: present
     update_homebrew: true
+- name: Upgrade all homebrew packages
+  upgrade_all: true
+- name: Install homebrew forumale
+  loop:
+    - git
+    - make
+    - unzip
+    - wget
+    - moreutils
+    - zip
+    - bash-completion
+    - binutils
+    - coreutils
+    - findutils
+    - gnu-tar
+    - gnu-sed
+    - gawk
+    - gnutls
+    - gnu-indent
+    - gnu-getopt
+    - grep
+    - openssh
+    - tmux
+    - awscli
+    - aws-sam-cli
+    - docker
+    - docker-completion
+    - docker-buildx
+  community.general.homebrew:
+    name: "{{ item }}"
+    state: "latest"
     force_formula: true
 - name: Install homebrew casks
   community.general.homebrew_cask:
     name:
       - alacritty
       - visual-studio-code
-    state: present
+    state: "latest"
