oops forgot module name

--- a/dev_work_bootstrap/tasks/darwin.yaml
+++ b/dev_work_bootstrap/tasks/darwin.yaml
@@ -3,7 +3,8 @@
   community.general.homebrew:
     update_homebrew: true
 - name: Upgrade all homebrew packages
-  upgrade_all: true
+  community.general.homebrew:
+    upgrade_all: true
 - name: Install homebrew forumale
   loop:
     - git
@@ -39,4 +40,5 @@
     name:
       - alacritty
       - visual-studio-code
+      - alfred
     state: "latest"
