--- a/dev_work_bootstrap/tasks/darwin.yaml
+++ b/dev_work_bootstrap/tasks/darwin.yaml
@@ -3,45 +3,15 @@
   community.general.homebrew:
     update_homebrew: true
 - name: Upgrade all homebrew packages
-  debugger: on_failed
   community.general.homebrew:
     upgrade_all: true
     install_options:
       - --overwrite
+# Using a loop is less effecient than using a single task with a list of 
+# packages. but this avoids the need to separate out cask only packages. 
+# brew will not allow cask and formulae to be installed in the same task.
 - name: Install homebrew forumale
-  loop:
-    - git
-    - make
-    - unzip
-    - wget
-    - moreutils
-    - zip
-    - bash-completion
-    - binutils
-    - coreutils
-    - findutils
-    - gnu-tar
-    - gnu-sed
-    - gawk
-    - gnutls
-    - gnu-indent
-    - gnu-getopt
-    - grep
-    - openssh
-    - tmux
-    - awscli
-    - aws-sam-cli
-    - docker
-    - docker-completion
-    - docker-buildx
+  loop: "{{ brew_packages }}"
   community.general.homebrew:
     name: "{{ item }}"
-    state: "latest"
-    force_formula: true
-- name: Install homebrew casks
-  community.general.homebrew_cask:
-    name:
-      - alacritty
-      - visual-studio-code
-      - alfred
     state: "latest"
