try to fix the macos link issues with brew in the pipeline vs ansible

--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -44,6 +44,8 @@ jobs:
         run: |
           brew update
           brew install ansible
+          brew link --overwrite
+          brew doctor
       - name: Add git dirs to path
         run: |
           echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
