--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -44,6 +44,7 @@ jobs:
         run: |
           brew update
           brew install ansible
+          brew doctor
           brew link --overwrite
           brew doctor
       - name: Add git dirs to path
