move creation of dependend directories as early as possible

--- a/dev_work_bootstrap/tasks/general.yaml
+++ b/dev_work_bootstrap/tasks/general.yaml
@@ -1,4 +1,14 @@
 ---
+- name: Ensure core directories exists
+  loop:
+    - $HOME/.local
+    - $HOME/.local/bin
+    - $HOME/.local/share
+    - $HOME/.local/share/bash-completion
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    mode: "0755"
 - name: Install uv
   tags:
     - uv
