break out the items into tools and languages

--- a/dev_work_bootstrap/tasks/main.yaml
+++ b/dev_work_bootstrap/tasks/main.yaml
@@ -10,67 +10,70 @@
   ansible.builtin.include_tasks: general.yaml
   tags:
     - general
-- name: Include cloudflared tasks
-  ansible.builtin.include_tasks: cloudflared.yaml
-  tags:
-    - cloudflared
-- name: Include winget tasks
-  ansible.builtin.include_tasks: winget.yaml
-  tags:
-    - winget
 - name: Include shell tasks
   ansible.builtin.include_tasks: shell.yaml
   tags:
     - shell
-- name: Include git tasks
-  ansible.builtin.include_tasks: git.yaml
-  tags:
-    - git
+
 - name: Include go tasks
-  ansible.builtin.include_tasks: go.yaml
+  ansible.builtin.include_tasks: languages/go.yaml
   tags:
     - go
 - name: Include python tasks
-  ansible.builtin.include_tasks: python.yaml
+  ansible.builtin.include_tasks: languages/python.yaml
   tags:
     - python
 - name: Include javascript tasks
-  ansible.builtin.include_tasks: javascript.yaml
+  ansible.builtin.include_tasks: languages/javascript.yaml
   tags:
     - javascript
-- name: Include terraform tasks
-  ansible.builtin.include_tasks: terraform.yaml
-  tags:
-    - terraform
 - name: Include ruby tasks
-  ansible.builtin.include_tasks: ruby.yaml
+  ansible.builtin.include_tasks: languages/ruby.yaml
   tags:
     - ruby
 - name: Include rust tasks
-  ansible.builtin.include_tasks: rust.yaml
+  ansible.builtin.include_tasks: languages/rust.yaml
   tags:
     - rust
+
+
+- name: Include cloudflared tasks
+  ansible.builtin.include_tasks: tools/cloudflared.yaml
+  tags:
+    - cloudflared
+- name: Include winget tasks
+  ansible.builtin.include_tasks: tools/winget.yaml
+  tags:
+    - winget
+- name: Include git tasks
+  ansible.builtin.include_tasks: tools/git.yaml
+  tags:
+    - git
+- name: Include terraform tasks
+  ansible.builtin.include_tasks: tools/terraform.yaml
+  tags:
+    - terraform
 - name: Include kubernetes tasks
-  ansible.builtin.include_tasks: kubernetes.yaml
+  ansible.builtin.include_tasks: tools/kubernetes.yaml
   tags:
     - kubernetes
 - name: Include docker tasks
-  ansible.builtin.include_tasks: docker.yaml
+  ansible.builtin.include_tasks: tools/docker.yaml
   tags:
     - docker
 - name: Include markdown tasks
-  ansible.builtin.include_tasks: markdown.yaml
+  ansible.builtin.include_tasks: tools/markdown.yaml
   tags:
     - markdown
 - name: Include aws tasks
-  ansible.builtin.include_tasks: aws.yaml
+  ansible.builtin.include_tasks: tools/aws.yaml
   tags:
     - aws
 - name: Include neovim tasks
-  ansible.builtin.include_tasks: neovim.yaml
+  ansible.builtin.include_tasks: tools/neovim.yaml
   tags:
     - neovim
 - name: Include backblaze tasks
-  ansible.builtin.include_tasks: backblaze.yaml
+  ansible.builtin.include_tasks: tools/backblaze.yaml
   tags:
     - backblaze
