--- a/dev_work_bootstrap/tasks/tools/backblaze.yaml
+++ b/dev_work_bootstrap/tasks/tools/backblaze.yaml
@@ -2,11 +2,12 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/ansible.json#/$defs/tasks
 - name: Install backblaze cli on linux
   when: ansible_system == "Linux"
-  ansible.builtin.unarchive: https://github.com/Backblaze/B2_Command_Line_Tool/releases/latest/download/b2-linux
-  dest: $HOME/.local/bin/b2
-  mode: "0755"
-  keep_newer: true
-  remote_src: true
+  ansible.builtin.get_url:
+    url: https://github.com/Backblaze/B2_Command_Line_Tool/releases/latest/download/b2-linux
+    dest: $HOME/.local/bin/b2
+    mode: "0755"
+    keep_newer: true
+    remote_src: true
 - name: Install backblaze cli on Darwin
   when: ansible_system == "Darwin"
   community.general.homebrew:
