trying to fix brew link issues

--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -45,6 +45,10 @@ jobs:
           brew update
           brew install ansible
           brew cleanup
+          echo "List of installed formulae"
+          brew list --formula --full-name -1
+          echo "relinking all formulae"
+          brew link --overwrite $(brew list --formula --full-name -1 | tr '\n' ' ')
       - name: Add git dirs to path
         run: |
           echo "$HOME/.pyenv/bin" >> "$GITHUB_PATH"
