--- a/dev_work_bootstrap/tasks/os_family/darwin.yaml
+++ b/dev_work_bootstrap/tasks/os_family/darwin.yaml
@@ -6,8 +6,8 @@
 - name: Upgrade all homebrew packages
   community.general.homebrew:
     upgrade_all: true
-    install_options:
-      - --overwrite
+    # install_options:
+    #   - --overwrite
 # Using a loop is less effecient than using a single task with a list of
 # packages. but this avoids the need to separate out cask only packages.
 # brew will not allow cask and formulae to be installed in the same task.
