--- a/dev_work_bootstrap/tasks/tools/backblaze.yaml
+++ b/dev_work_bootstrap/tasks/tools/backblaze.yaml
@@ -1,13 +1,6 @@
 ---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/ansible/ansible-lint/main/src/ansiblelint/schemas/ansible.json#/$defs/tasks
-- name: Install backblaze cli on linux
-  when: ansible_system == "Linux"
-  ansible.builtin.get_url:
-    url: https://github.com/Backblaze/B2_Command_Line_Tool/releases/latest/download/b2-linux
-    dest: $HOME/.local/bin/b2
-    mode: "0755"
-- name: Install backblaze cli on Darwin
-  when: ansible_system == "Darwin"
-  community.general.homebrew:
-    name: b2-tools
-    state: "latest"
+- name: Install backblaze cli
+  ansible.builtin.command:
+    cmd: uv tool install b2[full]
+    creates: $HOME/.local/bin/b2
