incorrect syntax for install_options

--- a/dev_work_bootstrap/tasks/os_family/darwin.yaml
+++ b/dev_work_bootstrap/tasks/os_family/darwin.yaml
@@ -11,5 +11,4 @@
   community.general.homebrew:
     name: "{{ item }}"
     state: "latest"
-    install_options:
-      - "--overwrite "
+    install_options: overwrite
