disable openssh from default list. it's causing issues and most people will have it installed by default i think. switch to using list of names instead of a loop of items. fix cloudflared on darwin

--- a/dev_work_bootstrap/defaults/main.yml
+++ b/dev_work_bootstrap/defaults/main.yml
@@ -159,6 +159,7 @@ aws_sam_cli:
     x86_64: x86_64
     aarch64: arm64
 brew_packages:
+  # - openssh
   - git
   - make
   - unzip
@@ -176,7 +177,6 @@ brew_packages:
   - gnu-indent
   - gnu-getopt
   - grep
-  - openssh
   - tmux
   - alacritty
   - visual-studio-code
