--- a/dev_work_bootstrap/tasks/os_family/darwin.yaml
+++ b/dev_work_bootstrap/tasks/os_family/darwin.yaml
@@ -7,10 +7,7 @@
 # packages. but this avoids the need to separate out cask only packages.
 # brew will not allow cask and formulae to be installed in the same task.
 - name: Install homebrew forumale
-  loop: "{{ brew_packages }}"
   community.general.homebrew:
-    name: "{{ item }}"
-    state: "present" # i'd like to run as latest but it causes issues with any existing packages and brew.
+    name: "{{ brew_packages }}"
+    state: "latest"
     install_options: overwrite
-# Notes
-# failed: openssh
