unlink awscli so it should install correctly in ansible

--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -24,10 +24,10 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-24.04-arm
-          - ubuntu-latest
+          # - ubuntu-24.04-arm
+          # - ubuntu-latest
           - macos-13
-          - macos-latest
+          # - macos-latest
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -45,6 +45,7 @@ jobs:
           brew update
           brew install ansible
           brew cleanup
+          brew unlink awscli
       - name: Add git dirs to path
         run: |
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
