--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -45,7 +45,7 @@ jobs:
           brew update
           brew install ansible
           brew cleanup
-          brew uninstall awscli
+          brew install awscli --overwrite
       - name: Add git dirs to path
         run: |
           echo "$HOME/.local/bin" >> "$GITHUB_PATH"
