install/upgrade python but skip linking

--- a/.github/workflows/ansible.yaml
+++ b/.github/workflows/ansible.yaml
@@ -45,6 +45,7 @@ jobs:
           brew update
           brew install ansible
           brew cleanup
+          brew install python --skip-link
           brew install awscli --overwrite
       - name: Add git dirs to path
         run: |
